# loyalty

./: .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  STRUCTURE.md  aiogra,.txt  architecture_analysis.md  audit.md  catalog_attribute_requirements.md  coverage.xml  docker-compose.yml  draft.md  eslint.config.mjs  main.py  openapi.json  package-lock.json  package.json  product-creation-flow.md  pyproject.toml  pytest.ini
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  STRUCTURE.md  alembic.ini  backup.md  categories.json  data.json  draft.md  draft.txt  flow.md  main.py  openapi.json  prd.md  problems.md  product-attributes-integration.md  pyproject.toml  pytest.ini  railway.toml  review.md  yandex_delivery_api.xml
backend/.antigravity/: rules.md
backend/.claude/: ralph-loop.local.md  settings.json  settings.local.json
backend/.claude/agents/: competitive-intel.md  gap-analysis.md  prd-writer.md  senior-architect.md  senior-backend.md  senior-reviewer.md
backend/.claude/skills/scaffold-module/: SKILL.md
backend/.claude/skills/use-railway/: SKILL.md
backend/.firecrawl/: search-iso4217-cis.json  search-iso4217-impl.json  search-iso4217.json  search-six-group.json
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_24_unified_username.py  c2232832f7da_add_supplier_is_active_version_columns_and_.py
backend/docs/: geo-module-reference.md  media_upload_flow.md  product-creation-flow.md  product-sourcing-flow.md  size-standards.md
backend/docs/Order/: Research - Order (1) Domain-Driven Design.md  Research - Order (2) State Machine FSM.md  Research - Order (3) E-commerce Giants.md  Research - Order (4) OMS Platforms.md  Research - Order (5) Payment Integration.md  Research - Order (6) Logistics Integration.md  Research - Order (7) Saga Pattern.md  Research - Order (8) Analytics and Operations.md  Research - Order Architecture.md
backend/docs/Order/dobropost_shipment_api/: README.md  openapi.json
backend/docs/api/: product-creation-flow.md
backend/docs/cdek_api/: cdek_territorial_hierarchy.md
backend/docs/cdek_api/json/: cdek_api_v2_openapi.json
backend/docs/dobropost_shipment_api/: README.md  integration.md  reference.md  status-codes.md  webhooks.md
backend/docs/local_logistics/: russia_territorial_hierarchy.md
backend/docs/local_logistics/cdek_api/: openapi.json
backend/docs/local_logistics/russian_post_api/: russian_post_territorial_hierarchy.md
backend/docs/prompts/: deep-code-review-eav.md  fix-deep-review-findings.md
backend/docs/reference/: brd.md  quality.md
backend/docs/requirements/: brd.md  cart.md
backend/docs/research/: 2026-03-19-backend-users-staff-current-state-analysis.md  bot_backend.md  bot_ux_design.md
backend/docs/research/cart-architecture/: 01-enterprise-platforms-cart-architecture.md  02-crossborder-marketplace-cart-patterns.md  03-ddd-architecture-patterns.md  04-pricing-payments-architecture.md  05-state-management-ux-patterns.md
backend/docs/reviews/: data_quality.md  deep-code-review-eav.md
backend/docs/russian_post_api/html/: archive-batch_to_archive.html  batches-create_batch_from_N_orders.html  batches-find_order_by_id.html  claims-creating_claim.html  dictionary-countries.html  dictionary-currencies.html  documents-create_all_docs.html  documents-create_forms.html  enums-base-batch-category.html  enums-base-last-oper-attr.html  enums-base-mail-type.html  enums-base-return-address-type.html  enums-base-transport-mode.html  enums-clean-fio-quality.html  enums-delivery-point-type.html  enums-dimension-type.html  enums-document-download-status.html  enums-errors.html  enums-goods-type.html  (+11 more)
backend/docs/yandex_delivery_api/: yandex_delivery_territorial_hierarchy.md
backend/scripts/: backfill_sku_pricing.py  entrypoint.sh  seed_dev.sql  seed_geo.py  seed_geo_kazakhstan.json  seed_geo_russia.json  seed_geo_subdivision_types.json  seed_geo_uzbekistan.json
backend/seed/: __main__.py  main.py  validate.py
backend/seed/admin/: admin.json  create_admin_user.py
backend/seed/attributes/: attributes.json  create_attributes.py
backend/seed/brands/: brands.json  create_brands.py
backend/seed/categories/: categories.json  create_categories.py
backend/seed/geo/: create_currencies.py  currencies.json
backend/seed/logistics/: seed_cdek.py  seed_yandex_delivery.py
backend/seed/pricing/: seed_pricing.py  system_variables.json
backend/seed/products/: create_products.py  products.json
backend/seed/roles/: create_roles.py
backend/src/api/: __init__.py  router.py
backend/src/bootstrap/: config.py  container.py  logger.py  scheduler.py  web.py  worker.py
backend/src/bot/: factory.py  utils.py
backend/src/shared/: cache_keys.py  exceptions.py  pagination.py
backend/tests/: conftest.py
backend/tests/architecture/: test_boundaries.py
backend/tests/e2e/: conftest.py
backend/tests/factories/: __init__.py  attribute_builder.py  attribute_group_builder.py  attribute_template_builder.py  brand_builder.py  builders.py  cart_builder.py  catalog_mothers.py  identity_mothers.py  media_asset_builder.py  orm_factories.py  product_builder.py  sku_builder.py  sku_mothers.py  user_mothers.py  variant_builder.py
backend/tests/fakes/: __init__.py  cart_fakes.py  fake_catalog_repos.py  fake_logistics_providers.py  fake_uow.py
backend/tests/integration/: test_query_counter_smoke.py
backend/tests/unit/: conftest.py  test_builders_smoke.py  test_fake_uow_smoke.py  test_strategies_smoke.py
backend/tests/utils/: __init__.py  catalog_query_baselines.py  query_counter.py
image_backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  flow.md  pyproject.toml
image_backend/alembic/: script.py.mako
image_backend/scripts/: entrypoint.sh
image_backend/src/api/: router.py
image_backend/src/bootstrap/: broker.py  config.py  container.py  web.py  worker.py
image_backend/src/shared/: context.py  streams.py  validators.py
image_backend/tests/integration/: test_upload_flow.py
(+2949 files in other folders)
