[project]
name = "loyality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # --- Web framework & ASGI server ---
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.41.0",
    # --- Database & ORM ---
    "sqlalchemy[asyncio]>=2.1.0b1",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    # --- DI container ---
    "dishka>=1.9.1",
    # --- Domain modeling ---
    "attrs>=25.4.0",
    # --- Auth & security ---
    "pyjwt[crypto]>=2.12.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    # --- Cache ---
    "redis[hiredis]>=7.3.0",
    "cachetools>=7.0.5",
    # --- Background tasks (RabbitMQ) ---
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.6.0",
    # --- HTTP client ---
    "httpx[http2]>=0.28.1",
    # --- Structured logging ---
    "structlog>=25.5.0",
    # --- Telegram bot ---
    "aiogram>=3.26.0",
]

[dependency-groups]
dev = [
    "cloc>=0.2.5",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "locust>=2.43.3",
    "mypy>=1.19.1",
    "polyfactory>=3.3.0",
    "pyclean>=3.5.0",
    "pytest>=9.0.2",
    "pytest-archon>=0.0.7",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "testcontainers[minio,postgres,rabbitmq,redis]>=4.14.1",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "architecture: Fitness functions and boundary enforcement",
    "unit: Domain-layer pure logic, zero I/O",
    "integration: Application + Infrastructure with real database",
    "e2e: Presentation-layer HTTP round-trips",
    "load: Resilience and threshold testing (Locust)",
]
filterwarnings = ["ignore::DeprecationWarning:dishka.*"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003", "B008", "UP042", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.uv.workspace]
members = [
    "loyality",
]
