[project]
name = "image-backend"
version = "0.1.0"
description = "Image processing microservice — upload, resize, thumbnail, webp conversion"
requires-python = ">=3.14"
dependencies = [
    "aiobotocore>=3.2.1",
    "alembic>=1.18.4",
    "anyio>=4.12.1",
    "asyncpg>=0.31.0",
    "attrs>=25.4.0",
    "dishka>=1.9.1",
    "fastapi[standard]>=0.115.0",
    "pillow>=11.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "redis[hiredis]>=7.3.0",
    "sqlalchemy[asyncio]>=2.1.0b1",
    "structlog>=25.5.0",
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.6.0",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pyclean>=3.6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003", "B008", "UP042", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
